# smart_home

Android/HeaterControl/app/: build.gradle
Android/MotionSensor/: settings.gradle
Android/MotionSensor/app/: build.gradle
Android/PumpControl/: settings.gradle
Android/SmartHome/: build.gradle  local.properties
Android/SmartHome/app/: build.gradle
Android/WeatherApp/app/: build.gradle
C/device_emulator/: main.c
Go/MessageBroker_new/test_resources/: configuration.json  testConfiguration.json
Go/SmartHome_new/: go.mod
Go/SmartHome_new/test_resources/: testConfiguration.json
Go/dbinit/sequences/: sequences.sql
Go/dbinit/tables/: locations.sql  sensor_data.sql  sensors.sql
Go/dbinit/views/: v_latest_sensor_data.sql  v_sensor_data.sql
Go/heaterControl/: go.mod  go.sum
Go/rfDeviceManager/: build.sh
Go/sensor_config_updater/: go.mod
Kotlin/smart_home_query/: settings.gradle.kts
Rust/drafts/converter/: Cargo.toml
Rust/drafts/dbinit/: partitions.pl
Rust/drafts/smart_home_common/: Cargo.toml
Rust/drafts/smart_home_sensor_server/: Cargo.toml  configuration.json
Rust/drafts/smart_home_user_server/: Cargo.toml
Rust/drafts/smart_home_user_server/src/: command_processor.rs  configuration.rs  main.rs  message_processor.rs
Rust/drafts/smart_home_user_server/test_resources/: testConfiguration.json
drafts/C/device_emulator/: main.c
drafts/Kotlin/smart_home_query/: build.gradle.kts
drafts/Rust/smart_home_user_server/: Cargo.toml
new/Android/SmartHome/: build.gradle
new/Kotlin/smart_home_common/: build.gradle.kts
new/Kotlin/smart_home_query/: build.gradle.kts
new/Rust/db_refresh/: Cargo.toml
new/Rust/smart_home_common/: Cargo.toml
new/Rust/smart_home_fetcher/: Cargo.toml
new/Rust/smart_home_user_server/: Cargo.toml
new/Rust/smart_home_user_server/src/: command_processor.rs  configuration.rs  main.rs  message_processor.rs  sensor_data.rs
sensors/: crontab_pi  send_data.sh
sensors/ESP/c5_ieee802154_controller/: CMakeLists.txt  sdkconfig.defaults
sensors/ESP/c6_ieee802154_controller/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
sensors/ESP/c6_ieee802154_controller/main/: CMakeLists.txt  board.h  common.h  main.cpp
sensors/ESP/co2_sensor_c6_mini/: CMakeLists.txt  sdkconfig
sensors/ESP/co2_sensor_c6_super_mini/: CMakeLists.txt  reconfig.sh  sdkconfig.defaults
sensors/ESP/co2_sensor_c6_super_mini/main/: CMakeLists.txt  board.h  common.h
sensors/ESP/co2_sensor_common/: board_common.h  crypto.c  custom.c  env.c  env.h  hal.c  hal.h  ui.c  ui.h  wifi_commands.c
sensors/ESP/co2_sensor_s3_super_mini/: CMakeLists.txt  flash.sh  sdkconfig
sensors/ESP/common/: cc1101_func.c  cc1101_func.h  crc8.c  crc8.h  crypto.h  crypto_common.c  crypto_esp.c  crypto_esp.h  custom.h  led.h  main.c  net_client.h  ntp.c  ntp.h  nvs.c  nvs.h  qmp6988.c  qmp6988.h  scd30.c  scd30.h  scd4x.c  scd4x.h  sht3x.c  sht3x.h  sht4x.c  sht4x.h  vl_sensor.c  vl_sensor.h  wifi.c  wifi.h
sensors/ESP/current_sensor/main/: CMakeLists.txt  common.h  crypto.c  env.c  env.h  queue.c  queue.h  tcp_client.c
sensors/ESP/drafts/co2_sensor_c6_super_mini/main/: CMakeLists.txt  board.h
sensors/ESP/drafts/co2_sensor_s3/main/: CMakeLists.txt  board.h  common.h
sensors/ESP/h2_ieee802154_controller/: CMakeLists.txt  sdkconfig.defaults
sensors/ESP/h2_ieee802154_device/: CMakeLists.txt  sdkconfig.defaults
sensors/ESP/h2_ieee802154_device/main/: CMakeLists.txt  board.h  common.h  env.h  idf_component.yml  main.cpp
sensors/ESP/h2_packet_sniffer/: CMakeLists.txt  sdkconfig.defaults
sensors/ESP/h2_packet_sniffer/main/: CMakeLists.txt  board.h  common.h  main.c
sensors/ESP/ieee802154/: common_functions.c  common_functions.h  controller_main.cpp  env.h  events.c  events.h  hal.c  hal.h  ieee802154_ble.c  ieee802154_ble.h  ieee802154_net_client.c  ieee802154_net_client.h  psa_crypto.c  psa_crypto.h  scd4x_functions.c  scd4x_functions.h  sht4x_functions.c  sht4x_functions.h
sensors/ESP/motion_sensor/: build.bat  sdkconfig
sensors/ESP/motion_sensor/main/: CMakeLists.txt  board.h  common.h  crypto.c  env.c  env.h  sht3x.h
sensors/ESP/motion_sensor/main/popolu/: VL53L1X.c
sensors/ESP/temp_humi_pres_sensor/: build.bat  config.bat  flash.bat  sdkconfig  sdkconfig.defaults
sensors/ESP/temp_humi_pres_sensor/main/: CMakeLists.txt  board.h  common.h  crypto.c  env.c  env.h  qmp6988.h  udp_client.c
sensors/ESP/temp_humi_pres_sensor_s3/: build.bat  config.bat  flash.bat  flash.sh  fullclean.sh  sdkconfig
sensors/ESP/temp_humi_pres_sensor_s3/main/: CMakeLists.txt  board.h  common.h  crypto.c  custom.c  env.c  env.h  hal.c  hal.h  udp_client.c
sensors/ESP/test/ieee-802_15_4/ieee-802_15_4_controller/main/: CMakeLists.txt  board.h  common.h  idf_component.yml  main.cpp
sensors/ESP/test/scd41_test/main/: CMakeLists.txt  board.h  common.h  ds1307_commands.c  ds3231_commands.c  hal.c  i2c_commands.c  idf_component.yml  main.c  scd41_commands.c
sensors/ESP/utils_linux/psa_crypto_test/: CMakeLists.txt  main.c
sensors/raspberry-pi-ads1115/: Makefile  ads1115.c  get_data.sh  send_data.sh
sensors/raspberry-pi-ads1115_2/: ads1115.c  get_temperature.sh  get_vcc.sh  send_data.sh  send_edata.sh
sensors/raspberry-pi-bme280/: bme280.c  send_data.sh
v1/Android/DoorControl/: settings.gradle
v1/Android/HeaterControl/: settings.gradle
v1/Android/SmartHome/: local.properties
v2/C/device_emulator/: CMakeLists.txt
v2/Rust/smart_home_user_server/: Cargo.toml
v2/Rust/smart_home_user_server/src/: main.rs
v2/Rust/smart_home_user_server/test_resources/: testConfiguration.json
v3/Rust/smart_home_common/: Cargo.toml
v3/Rust/smart_home_common/src/: base_server.rs  db.rs  db_postgres.rs  db_redis.rs  entities.rs  lib.rs  user_message_processor.rs
v3/Rust/smart_home_common/test_resources/: locations1.json  sensors1.json  sensors2.json
v3/SmartHomeConverter/: SmartHomeConverter.sln  value_types
v3/SmartHomeServiceClient/: SmartHomeServiceClient.sln
v3/SmartHomeUI/: SmartHomeUI.sln
v3/SmartHomeUserServer/: SmartHomeUserServer.sln
v3/redis_migration/: Cargo.toml
(+622 files in other folders)
