[package]
name = "smart_home_user_server"
version = "0.1.0"
edition = "2024"

[dependencies]
smart_home_common = { path = "../smart_home_common" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chacha20 = "0.9.X"
rand = "0.9.X"
bzip2 = "0.X"
chrono = "0.X"
postgres = "0.X"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false