[package]
name = "smart_home_user_server"
version = "0.1.0"
edition = "2024"

[dependencies]
smart_home_common = { path = "../smart_home_common" }
serde = { version = "1.X", features = ["derive"] }
serde_json = "1.X"
rand = { version = "0.X", features = ["sys_rng"] }
chrono = "0.X"
postgres = { version = "0.X", features = ["with-serde_json-1"]}

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
