idf_component_register(
  SRCS  "../../co2_sensor_common/hal.c"
        "../../co2_sensor_common/wifi_commands.c"
        "../../co2_sensor_common/ui.c"
        "../../co2_sensor_common/env.c"
        "../../co2_sensor_common/udp_client.c"
        "../../co2_sensor_common/crypto.c"
        "../../co2_sensor_common/custom.c"
        "../../common/scd30.c"
        "../../common/crc8.c"
        "../../common/cc1101_func.c"
        "../../common/main.c"
#        "../../common/gatt_svr.c"
        "../../common/wifi.c"
#        "../../common/ble.c"
        "../../common/nvs.c"
        "../../common/led.c"
        "../../common/net_client_common.c"
        "../../common/ntp.c"
        "../../common/crypto_common.c"
        "../../common/crypto_esp.c"
        "../../../ARM_CLION/common_lib/sensor/bh1750.c"
        "../../../ARM_CLION/common_lib/getstring.c"
        "../../../ARM_CLION/common_lib/shell/shell.c"
        "../../../ARM_CLION/common_lib/fixed_queue.c"
        "../../../ARM_CLION/common_lib/display/epd_ssd1680.c"
        "../../../ARM_CLION/common_lib/display/fonts/font16.c"
        "../../../ARM_CLION/common_lib/display/fonts/font36_2.c"
        "../../../ARM_CLION/common_lib/display/display.c"
        "../../../ARM_CLION/common_lib/rf/cc1101.c"
        "../../../ARM_CLION/common_lib/rf/laCrosseDecoder.c"
  INCLUDE_DIRS
        "."
        "../../common"
        "../../co2_sensor_common"
        "../../../ARM_CLION/common_lib/shell"
        "../../../ARM_CLION/common_lib/display"
        "../../../ARM_CLION/common_lib/rf"
        "../../../ARM_CLION/common_lib/sensor"
        "../../../ARM_CLION/common_lib"
)
