idf_component_register(SRCS "../../common/main.c" "../../common/gatt_svr.c" "../../common/wifi.c" "../../common/ble.c" "../../common/nvs.c" "env.c" "../../common/led.c" "crypto.c" "udp_client.c"
  "../../common/ntp.c"
  "sht3x.c"
  "qmp6988.c"
#  "D:/serg/my/Programs/ARM_CLION/common_lib/sensor/bme280.c"
  INCLUDE_DIRS "." "../../common"
#  "D:/serg/my/Programs/ARM_CLION/common_lib/sensor"
)
