idf_component_register(SRCS "../../common/main.c" "../../common/gatt_svr.c" "../../common/wifi.c" "../../common/ble.c"
  "../../common/nvs.c" "env.c" "../../common/led.c" "crypto.c" "udp_client.c" "cc1101_func.c" "hal.c" "laCrosseDecoder.c"
  "../../common/ntp.c" "D:/serg/my/Programs/ARM_CLION/common_lib/sensor/bme280.c"
  "D:/serg/my/Programs/ARM_CLION/common_lib/fixed_queue.c" "D:/serg/my/Programs/ARM_CLION/common_lib/PrologueDecoder.c"
  "D:/serg/my/Programs/ARM_CLION/common_lib/rf/cc1101.c"
  INCLUDE_DIRS "." "../../common" "D:/serg/my/Programs/ARM_CLION/common_lib" "D:/serg/my/Programs/ARM_CLION/common_lib/sensor"
  "D:/serg/my/Programs/ARM_CLION/common_lib/rf"
)
