idf_component_register(SRCS "../../common/main.c" "../../common/gatt_svr.c" "../../common/wifi.c" "../../common/ble.c"
  "../../common/nvs.c" "env.c" "../../common/led.c" "../../common/net_client_common.c" "../../common/ntp.c"
  "../../common/crypto_common.c"
  "crypto.c" "udp_client.c" "cc1101_func.c" "hal.c"
  "../../../ARM_CLION/common_lib/rf/laCrosseDecoder.c"
  "../../../ARM_CLION/common_lib/sensor/bme280.c"
  "../../../ARM_CLION/common_lib/sensor/mh_z19b.c"
  "../../../ARM_CLION/common_lib/fixed_queue.c"
  "../../../ARM_CLION/common_lib/rf/PrologueDecoder.c"
  "../../../ARM_CLION/common_lib/rf/BresserDecoder.c"
  "../../../ARM_CLION/common_lib/rf/cc1101.c"
  INCLUDE_DIRS "." "../../common" "../../../ARM_CLION/common_lib" "../../../ARM_CLION/common_lib/sensor"
  "../../../ARM_CLION/common_lib/rf"
)
