idf_component_register(
  SRCS "../../co2_sensor_common/main.c"
        "../../co2_sensor_common/hal.c"
        "../../co2_sensor_common/wifi_commands.c"
        "../../co2_sensor_common/sht_commands.c"
        "../../co2_sensor_common/display_commands.c"
        "../../co2_sensor_common/scd_commands.c"
        "../../co2_sensor_common/i2c_commands.c"
        "../../co2_sensor_common/ui_commands.c"
        "../../co2_sensor_common/ui.c"
        "../../co2_sensor_common/cc1101_commands.c"
        "../../co2_sensor_common/bh_commands.c"
        "../../co2_sensor_common/vl_commands.c"
        "../../common/wifi.c"
        "../../common/sht4x.c"
        "../../common/scd30.c"
        "../../common/crc8.c"
        "../../common/cc1101_func.c"
        "../../../ARM_CLION/common_lib/sensor/bh1750.c"
        "../../../ARM_CLION/common_lib/sensor/vl6180.c"
        "../../../ARM_CLION/common_lib/getstring.c"
        "../../../ARM_CLION/common_lib/shell/shell.c"
        "../../../ARM_CLION/common_lib/fixed_queue.c"
        "../../../ARM_CLION/common_lib/display/epd_ssd1680.c"
        "../../../ARM_CLION/common_lib/display/fonts/font16.c"
        "../../../ARM_CLION/common_lib/display/fonts/font36_2.c"
        "../../../ARM_CLION/common_lib/display/display.c"
        "../../../ARM_CLION/common_lib/rf/cc1101.c"
        "../../../ARM_CLION/common_lib/rf/laCrosseDecoder.c"
  INCLUDE_DIRS
        "."
        "../../common"
        "../../co2_sensor_common"
        "../../../ARM_CLION/common_lib/shell"
        "../../../ARM_CLION/common_lib/display"
        "../../../ARM_CLION/common_lib/rf"
        "../../../ARM_CLION/common_lib/sensor"
        "../../../ARM_CLION/common_lib"
)
